syntax = "proto3";
package lavanet.lava.projects;
import "amino/amino.proto";

import "lavanet/lava/projects/project.proto";
import "lavanet/lava/plans/policy.proto";
import "gogoproto/gogo.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/lavanet/lava/v4/x/projects/types";

// Msg defines the Msg service.
service Msg {
  rpc AddKeys(MsgAddKeys) returns (MsgAddKeysResponse);
  rpc DelKeys(MsgDelKeys) returns (MsgDelKeysResponse);
  rpc SetPolicy(MsgSetPolicy) returns (MsgSetPolicyResponse);
  rpc SetSubscriptionPolicy(MsgSetSubscriptionPolicy) returns (MsgSetSubscriptionPolicyResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgAddKeys {
  option (amino.name) = "projects/AddKeys";
  string creator = 1;
  string project = 2;
  repeated ProjectKey project_keys = 3 [(gogoproto.nullable) = false];
}

message MsgAddKeysResponse {
}

message MsgDelKeys {
  option (amino.name) = "projects/DelKeys";
  string creator = 1;
  string project = 2;
  repeated ProjectKey project_keys = 3 [(gogoproto.nullable) = false];
}

message MsgDelKeysResponse {
}

message MsgSetPolicy {
  option (amino.name) = "projects/SetPolicy";
  string creator = 1;
  string project = 2;
  lavanet.lava.plans.Policy policy = 3;
}

message MsgSetPolicyResponse {
}

message MsgSetSubscriptionPolicy {
  option (amino.name) = "projects/SetSubscriptionPolicy";
  string creator = 1;
  repeated string projects = 2;
  lavanet.lava.plans.Policy policy = 3;
}

message MsgSetSubscriptionPolicyResponse {
}

// this line is used by starport scaffolding # proto/tx/message
